[#175717256] Refactoring with verifyToken task
